# VuMakeSC

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/gltf/jet/: jet.gltf  license.txt
assets/gltf/mountain/: mountain.gltf
assets/shaders/: _compile_slang.bat  basic.pc.json  shader_common.slang  shader_frag.slang  shader_vert.slang  spirv_frag.spv  spirv_vert.spv
loader/: vulkansc-1.exp
src/: Main.cpp  Scene0.h
src/common/: Common.cpp  Common.h  VKSC_Utils.h  VuConfig.h  VuCtx.h  VuMath.h  directDisplay.cpp  directDisplay.h  pch.h
src/components/: Camera.h  Components.h  Transform.h
src/material/: VuMaterial.h  VuMaterialDataPool.h  VuResourceManager.cpp  VuResourceManager.h  VuShader.h
src/render/: VuAssetLoader.h  VuBuffer.cpp  VuBuffer.h  VuDepthStencil.h  VuDevice.h  VuGraphicsPipeline.h  VuImage.h  VuMesh.h  VuRenderPass.h  VuRenderer.Init.cpp  VuRenderer.cpp  VuRenderer.h  VuSampler.h  VuSwapChain.cpp  VuSwapChain.h  VuSync.h  VuTexture.h  VuTypes.h  VuUtils.h
